Simplify d-choices offset feature
Now you don't need to add the "shift-left/right" classes, you can just set the offset and it'll handle that for you

--- a/contribute/htmlguide.html
+++ b/contribute/htmlguide.html
@@ -79,8 +79,7 @@ credits: >
 				<td>Choice menu</td>
 				<td><ul>
 					<li><code>theme</code>: Changes the border. <a href="#themes">See below for names/descriptions of available themes.</a></li>
-					<li><code>class = shift-right | shift-left</code>: For offsetting the heart when the L/R options are too long</li>
-					<li><code>offset</code>: The amount to offset the heart by, in <code>%</code></li>
+					<li><code>offset</code>: For offsetting the heart when the L/R options are too long. Positive <code>%</code> values to shift it right (e.g. <code>offset="10%"</code>), negative to shift left (e.g. <code>offset="-10%"</code>)</li>
 					<li><code>noninteractive</code>: If options change nothing, use this attribute and don't include <code>d-option-panel</code>s afterwards</li>
 				</ul></td>
 				<td>
