--- a/locations/lightworld/dreemurrresidence/downstairs.html
+++ b/locations/lightworld/dreemurrresidence/downstairs.html
@@ -603,7 +603,7 @@ toc:
 		<d-sprite speaker="Toriel" variant="home" emotion="5"></d-sprite>
 		<d-text asterisk>Kris, Susie is the guest. Make an excuse for her.</d-text>
 	</d-box>
-	<d-choices theme="light" class="shift-right" offset="10%">
+	<d-choices theme="light" offset="10%">
 		<d-option index="0" text="Susie ate\sthe clothes"></d-option>
 		<d-option index="1" text="I ate\sthe clothes"></d-option>
 	</d-choices>
