POWER: Add IDs to each title

--- a/misc/powermenu.html
+++ b/misc/powermenu.html
@@ -26,19 +26,19 @@ or do we want to save that for a separate page...?
 	<h3 id="kris1">Chapter 1</h3>
 
 	<h4>Title</h4>
-	<h5>Initial</h5>
+	<h5 id="lv1human">Initial</h5>
 	<d-box theme="powertitle">
 		<d-text>LV1 Human</d-text>
 		<d-text>Body contains a<span class="break"></span> human SOUL.</d-text>
 	</d-box>
 
-	<h5>After Ralsei joins the party</h5>
+	<h5 id="lv1leader">After Ralsei joins the party</h5>
 	<d-box theme="powertitle">
 		<d-text>LV1 Leader</d-text>
 		<d-text>Commands the party<span class="break"></span> with various ACTs.</d-text>
 	</d-box>
 
-	<h5>After inspecting all 4 beds in Hathy's room in Card Castle</h5>
+	<h5 id="lv1bedinspector">After inspecting all 4 beds in Hathy's room in Card Castle</h5>
 	<d-box theme="powertitle">
 		<d-text>LV1 Bed Inspector</d-text>
 		<d-text>Inspects all beds<span class="break"></span> inexplicably.</d-text>
@@ -57,32 +57,32 @@ or do we want to save that for a separate page...?
 	<h4>Title</h4>
 	<p>The LV value is 2 at the start of the chapter and changes to 3 after the Cyber World's Dark Fountain is sealed. It is represented by a "#" in this section.</p>
 
-	<h5>Initial</h5>
+	<h5 id="lv2leader">Initial</h5>
 	<d-box theme="powertitle">
 		<d-text>LV2 Leader</d-text>
 		<d-text>Commands the party<span class="break"></span> with various ACTs.</d-text>
 	</d-box>
 
-	<h5>After Susie and Ralsei learn S-Action/R-Action</h5>
+	<h5 id="lv2tactician">After Susie and Ralsei learn S-Action/R-Action</h5>
 	<d-box theme="powertitle">
 		<d-text>LV# Tactician</d-text>
 		<d-text>Commands the party<span class="break"></span> by ACTs. Sometimes.</d-text>
 	</d-box>
 
-	<h5>After inspecting all beds in Castle Town and Noelle's bed in Queen's Mansion</h5>
+	<h5 id="lv2bedinspector">After inspecting all beds in Castle Town and Noelle's bed in Queen's Mansion</h5>
 	<p>Requires you to continue a save file from Chapter 1 while possessing the Bed Inspector title.</p>
 	<d-box theme="powertitle">
 		<d-text>LV# Bed Inspector</d-text>
 		<d-text>Inspects all beds<span class="break"></span> inexplicably.</d-text>
 	</d-box>
 
-	<h5>After finding the moss in Cyber City</h5>
+	<h5 id="lv2mossfinder">After finding the moss in Cyber City</h5>
 	<d-box theme="powertitle">
 		<d-text>LV# Moss Finder</d-text>
 		<d-text>Basic moss-finding<span class="break"></span> abilities.</d-text>
 	</d-box>
 
-	<h5>After starting the Weird Route</h5>
+	<h5 id="lv2leaderweird">After starting the Weird Route</h5>
 	<d-box theme="powertitle">
 		<d-text>LV# Leader</d-text>
 		<d-text>Commands.</d-text>
@@ -100,43 +100,43 @@ or do we want to save that for a separate page...?
 
 	<h4>Title</h4>
 
-	<h5>Initial</h5>
+	<h5 id="lv3tactician">Initial</h5>
 	<d-box theme="powertitle">
 		<d-text>LV3 Tactician</d-text>
 		<d-text>Commands the party<span class="break"></span> by ACTs.</d-text>
 	</d-box>
 
-	<h5>After escaping Tenna</h5>
+	<h5 id="lv3director">After escaping Tenna</h5>
 	<d-box theme="powertitle">
 		<d-text>LV3 Director</d-text>
 		<d-text>Moves the actors<span class="break"></span> around.</d-text>
 	</d-box>
 
-	<h5>After finding the moss on Board 2</h5>
+	<h5 id="lv3mossmystery">After finding the moss on Board 2</h5>
 	<d-box theme="powertitle">
 		<d-text>LV3 Moss Mystery</d-text>
 		<d-text>Intermediate moss<span class="break"></span> skills.</d-text>
 	</d-box>
 
-	<h5>After finishing Sword Route's Board 1</h5>
+	<h5 id="lv3blazer">After finishing Sword Route's Board 1</h5>
 	<d-box theme="powertitle">
 		<d-text>LV3 Blazer</d-text>
 		<d-text>Specializes in<span class="break"></span> sword attacks.</d-text>
 	</d-box>
 
-	<h5>After finishing Sword Route's Board 2</h5>
+	<h5 id="lv3iceblazer">After finishing Sword Route's Board 2</h5>
 	<d-box theme="powertitle">
 		<d-text>LV3 Ice Blazer</d-text>
 		<d-text>Specializes in<span class="break"></span> sword attacks.</d-text>
 	</d-box>
 
-	<h5>After beating the Shadow Mantle Holder</h5>
+	<h5 id="lv3sheath">After beating the Shadow Mantle Holder</h5>
 	<d-box theme="powertitle">
 		<d-text>LV3 Sheath</d-text>
 		<d-text>Breath quickens<span class="break"></span> around swords.</d-text>
 	</d-box>
 
-	<h5>After finding the Egg</h5>
+	<h5 id="lv3egg">After finding the Egg</h5>
 	<d-box theme="powertitle">
 		<d-text>LV3 Enjoying<span class="break"></span> the youthful<span class="break"></span> days.</d-text>
 	</d-box>
@@ -153,19 +153,19 @@ or do we want to save that for a separate page...?
 
 	<h4>Title</h4>
 
-	<h5>Initial</h5>
+	<h5 id="lv4darkhero">Initial</h5>
 	<d-box theme="powertitle">
 		<d-text>LV4 Dark Hero</d-text>
 		<d-text>Carries out fate<span class="break"></span> with the blade.</d-text>
 	</d-box>
 
-	<h5>After finding all moss in this and previous chapters</h5>
+	<h5 id="lv4mossmost">After finding all moss in this and previous chapters</h5>
 	<d-box theme="powertitle">
 		<d-text>LV4 Moss Most</d-text>
 		<d-text>Munched the most<span class="break"></span> moist mosses.</d-text>
 	</d-box>
 
-	<h5>If on the Weird Route</h5>
+	<h5 id="lv4darkbead">If on the Weird Route</h5>
 	<d-box theme="powertitle">
 		<d-text>LV4 Dark Bead</d-text>
 		<d-text>Broken off,<span class="break"></span> but still locked.</d-text>
@@ -185,13 +185,13 @@ or do we want to save that for a separate page...?
 	<h3 id="susie1">Chapter 1</h3>
 
 	<h4>Title</h4>
-	<h5>Initial</h5>
+	<h5 id="lv1meangirl">Initial</h5>
 	<d-box theme="powertitle">
 		<d-text>LV1 Mean Girl</d-text>
 		<d-text>Won't do anything<span class="break"></span> but fight.</d-text>
 	</d-box>
 
-	<h5>After sparing Lancer</h5>
+	<h5 id="lv1darkknight">After sparing Lancer</h5>
 	<d-box theme="powertitle">
 		<d-text>LV1 Dark Knight</d-text>
 		<d-text>Does damage using<span class="break"></span> dark energy.</d-text>
@@ -210,19 +210,19 @@ or do we want to save that for a separate page...?
 	<h4>Title</h4>
 	<p>The LV value is 2 at the start of the chapter and changes to 3 after the Cyber World's Dark Fountain is sealed. It is represented by a "#" in this section.</p>
 
-	<h5>Initial</h5>
+	<h5 id="lv2darkknight">Initial</h5>
 	<d-box theme="powertitle">
 		<d-text>LV# Dark Knight</d-text>
 		<d-text>Does damage using<span class="break"></span> dark energy.</d-text>
 	</d-box>
 
-	<h5>After Ralsei teaches Susie healing</h5>
+	<h5 id="lv2healingmaster">After Ralsei teaches Susie healing</h5>
 	<d-box theme="powertitle">
 		<d-text>LV# Healing Master</d-text>
 		<d-text>Can use ultimate<span class="break"></span> healing. (Losers!)</d-text>
 	</d-box>
 
-	<h5>If you find the moss with Susie in the party</h5>
+	<h5 id="lv2mossenjoyer">If you find the moss with Susie in the party</h5>
 	<d-box theme="powertitle">
 		<d-text>LV# Moss Enjoyer</d-text>
 		<d-text>Supports those<span class="break"></span> that find moss.</d-text>
@@ -240,13 +240,13 @@ or do we want to save that for a separate page...?
 
 	<h4>Title</h4>
 
-	<h5>Initial</h5>
+	<h5 id="lv3darkknight">Initial</h5>
 	<d-box theme="powertitle">
 		<d-text>LV3 Dark Knight</d-text>
 		<d-text>Does damage using<span class="break"></span> dark energy.</d-text>
 	</d-box>
 
-	<h5>After escaping Tenna</h5>
+	<h5 id="lv3darkactorsus">After escaping Tenna</h5>
 	<d-box theme="powertitle">
 		<d-text>LV3 Dark Actor</d-text>
 		<d-text>Participates in<span class="break"></span> occult ACTs.</d-text>
@@ -264,13 +264,13 @@ or do we want to save that for a separate page...?
 
 	<h4>Title</h4>
 
-	<h5>Initial</h5>
+	<h5 id="lv4darkherosus">Initial</h5>
 	<d-box theme="powertitle">
 		<d-text>LV4 Dark Hero</d-text>
 		<d-text>Carries out fate<span class="break"></span> with the blade.</d-text>
 	</d-box>
 
-	<h5>After obtaining the Justice Axe</h5>
+	<h5 id="lv4axeofjustice">After obtaining the Justice Axe</h5>
 	<d-box theme="powertitle">
 		<d-text>LV4 Axe of Justice</d-text>
 		<d-text>Faces fate<span class="break"></span> with the blade.</d-text>
@@ -290,19 +290,19 @@ or do we want to save that for a separate page...?
 	<h3 id="ralsei1">Chapter 1</h3>
 
 	<h4>Title</h4>
-	<h5>Initial</h5>
+	<h5 id="lv1lonelyprince">Initial</h5>
 	<d-box theme="powertitle">
 		<d-text>LV1 Lonely Prince</d-text>
 		<d-text>Dark-World being.<span class="break"></span> Has no subjects.</d-text>
 	</d-box>
 
-	<h5>While Ragger is equipped</h5>
+	<h5 id="lv1pricklyprince">While Ragger is equipped</h5>
 	<d-box theme="powertitle">
 		<d-text>LV1 Prickly Prince</d-text>
 		<d-text>Deals damage with<span class="break"></span> his rugged scarf.</d-text>
 	</d-box>
 
-	<h5>While Dainty Scarf is equipped</h5>
+	<h5 id="lv1fluffyprince">While Dainty Scarf is equipped</h5>
 	<d-box theme="powertitle">
 		<d-text>LV1 Fluffy Prince</d-text>
 		<d-text>Weak, but has nice<span class="break"></span> healing powers.</d-text>
@@ -321,31 +321,31 @@ or do we want to save that for a separate page...?
 	<h4>Title</h4>
 	<p>The LV value is 2 at the start of the chapter and changes to 3 after the Cyber World's Dark Fountain is sealed. It is represented by a "#" in this section.</p>
 
-	<h5>Initial</h5>
+	<h5 id="lv2darkprince">Initial</h5>
 	<d-box theme="powertitle">
 		<d-text>LV# Dark Prince</d-text>
 		<d-text>Dark-World being.<span class="break"></span> Has friends now.</d-text>
 	</d-box>
 
-	<h5>If Kris hugged Ralsei during the photo</h5>
+	<h5 id="lv2hugprince">If Kris hugged Ralsei during the photo</h5>
 	<d-box theme="powertitle">
 		<d-text>LV# Hug Prince</d-text>
 		<d-text>Receives and<span class="break"></span> gives many hugs.</d-text>
 	</d-box>
 
-	<h5>If Kris made a peace sign during the photo</h5>
+	<h5 id="lv2poseprince">If Kris made a peace sign during the photo</h5>
 	<d-box theme="powertitle">
 		<d-text>LV# Pose Prince</d-text>
 		<d-text>Poses for photos<span class="break"></span> at times.</d-text>
 	</d-box>
 
-	<h5>If Kris made a rude gesture during the photo</h5>
+	<h5 id="lv2rudeprince">If Kris made a rude gesture during the photo</h5>
 	<d-box theme="powertitle">
 		<d-text>LV# Rude Prince</d-text>
 		<d-text>Friends with a<span class="break"></span> rude gesturer.</d-text>
 	</d-box>
 
-	<h5>If Kris didn't pose for the photo</h5>
+	<h5 id="lv2blankprince">If Kris didn't pose for the photo</h5>
 	<d-box theme="powertitle">
 		<d-text>LV# Blank Prince</d-text>
 		<d-text>Doesn't even<span class="break"></span> have a photo.</d-text>
@@ -363,31 +363,31 @@ or do we want to save that for a separate page...?
 
 	<h4>Title</h4>
 
-	<h5>Initial</h5>
+	<h5 id="lv3darkprince1">Initial</h5>
 	<d-box theme="powertitle">
 		<d-text>LV3 Dark Prince</d-text>
 		<d-text>Dark-World being.<span class="break"></span> Has friends, but...</d-text>
 	</d-box>
 
-	<h5>After escaping Tenna</h5>
+	<h5 id="lv3darkactorral">After escaping Tenna</h5>
 	<d-box theme="powertitle">
 		<d-text>LV3 Dark Actor</d-text>
 		<d-text>Has issues with<span class="break"></span> method acting.</d-text>
 	</d-box>
 
-	<h5>After the second cowboy minigame, while Ralsei's still wearing the horse costume</h5>
+	<h5 id="lv3horse">After the second cowboy minigame, while Ralsei's still wearing the horse costume</h5>
 	<d-box theme="powertitle">
 		<d-text>LV3 Horse</d-text>
 		<d-text>Is a horse.</d-text>
 	</d-box>
 
-	<h5>After Ralsei takes off the horse costume</h5>
+	<h5 id="lv3exhorse">After Ralsei takes off the horse costume</h5>
 	<d-box theme="powertitle">
 		<d-text>LV3 Ex-Horse</d-text>
 		<d-text>Was a horse at<span class="break"></span> some point.</d-text>
 	</d-box>
 
-	<h5>After fighting Tenna</h5>
+	<h5 id="lv3darkprince2">After fighting Tenna</h5>
 	<d-box theme="powertitle">
 		<d-text>LV3 Dark Prince</d-text>
 		<d-text>Dark-World being.<span class="break"></span> Has friends.</d-text>
@@ -405,13 +405,13 @@ or do we want to save that for a separate page...?
 
 	<h4>Title</h4>
 
-	<h5>Initial</h5>
+	<h5 id="lv4darkheroral">Initial</h5>
 	<d-box theme="powertitle">
 		<d-text>LV4 Dark Hero</d-text>
 		<d-text>Records and faces<span class="break"></span> the fate.</d-text>
 	</d-box>
 
-	<h5>While in the bookshelf room outside the old man's study, after Ralsei executes Magical Stool Forme R</h5>
+	<h5 id="lv4stoolboy">While in the bookshelf room outside the old man's study, after Ralsei executes Magical Stool Forme R</h5>
 	<d-box theme="powertitle">
 		<d-text>LV4 Stool Boy</d-text>
 		<d-text>Boy with stool<span class="break"></span> like abilities.</d-text>
@@ -432,25 +432,25 @@ or do we want to save that for a separate page...?
 
 	<h4>Title</h4>
 
-	<h5>Initial</h5>
+	<h5 id="lv1snowcaster">Initial</h5>
 	<d-box theme="powertitle">
 		<d-text>LV1 Snowcaster</d-text>
 		<d-text>Might be able to<span class="break"></span> use some cool moves.</d-text>
 	</d-box>
 
-	<h5>After using IceShock for the first time</h5>
+	<h5 id="lv2frostmancer">After using IceShock for the first time</h5>
 	<d-box theme="powertitle">
 		<d-text>LV2 Frostmancer</d-text>
 		<d-text>Freezes the enemy.</d-text>
 	</d-box>
 
-	<h5>While ThornRing is equipped</h5>
+	<h5 id="lv2icetrancer">While ThornRing is equipped</h5>
 	<d-box theme="powertitle">
 		<d-text>LV2 Ice Trancer</d-text>
 		<d-text>Receives pain to<span class="break"></span> become stronger.</d-text>
 	</d-box>
 
-	<h5>If you find the moss while Noelle is in the party, and you aren't on the Weird Route</h5>
+	<h5 id="lv2mossneutral">If you find the moss while Noelle is in the party, and you aren't on the Weird Route</h5>
 	<d-box theme="powertitle">
 		<d-text>LV2 Moss Neutral</d-text>
 		<d-text>Neither chaotic nor<span class="break"></span> lawful to moss.</d-text>
