Remove extensions on includes
Makes for easier include calls. Gonna be adding a .txt include and it'll be annoying trying to remember which includes have which extension, so we're just dropping the extension on all of them

--- a/locations/closetworld/index.html
+++ b/locations/closetworld/index.html
@@ -54,7 +54,7 @@ items:
 
 	<ul>
 		{% for item in section.sublist -%}
-		{% include nested_list_item.html parent=sectionurl this=item %}
+		{% include nested_list_item parent=sectionurl this=item %}
 		{% endfor %}
 	</ul>
 </section>
