--- a/locations/lightworld/index.html
+++ b/locations/lightworld/index.html
@@ -59,7 +59,7 @@ items:
 
 	<ul>
 		{% for item in section.sublist -%}
-		{% include nested_list_item.html parent=sectionurl this=item %}
+		{% include nested_list_item parent=sectionurl this=item %}
 		{% endfor %}
 	</ul>
 </section>
