Add DR wiki link extension

--- a/misc/darkitems.html
+++ b/misc/darkitems.html
@@ -2885,7 +2885,7 @@ toc:
 
 	<h4>Chapter 2 only</h4>
 	<h5>After Queen's car cutscene in Chapter 2</h5>
-	<p class="note">The track <a href="https://deltarune.wiki/w/Cool_Mixtape">"Cool Mixtape"</a> replaces the current soundtrack while the Item menu is open.</p>
+	<p class="note">The track <a href="{% include wikilink page='Cool Mixtape' %}">"Cool Mixtape"</a> replaces the current soundtrack while the Item menu is open.</p>
 
 	<h5>After being sent to your room in Queen's mansion</h5>
 	<p class="note">Lancer is removed from the Key Items; he emerges from Kris's pockets and appears in the overworld.</p>
