SAVE points: Correct "SAVE" capitalization in title/desc

--- a/misc/savepoints.html
+++ b/misc/savepoints.html
@@ -1,8 +1,8 @@
 ---
-title: Save points
+title: SAVE points
 description: >
-  <p>Narration that accompanies save points.</p>
-  <p>Save points not listed here have no additional text accompanying the save menu.</p>
+  <p>Narration that accompanies SAVE points.</p>
+  <p>SAVE points not listed here have no additional text accompanying the SAVE menu.</p>
 sources:
   -
     name: gml_GlobalScript_scr_roomname
