Fix title/desc for closet DW index
File was copied over from the Light World locations index and I forgot to update the metadata;;;

--- a/locations/closetworld/index.html
+++ b/locations/closetworld/index.html
@@ -1,8 +1,8 @@
 ---
-title: Light World locations
+title: Closet Dark World locations
 
 description: >
-  <p>Index for locations within the Light World, primarily in Hometown.</p>
+  <p>Index for locations within the supply closet's Dark World.</p>
 
 toc:
   -
