Document Holiday residence locations

--- a/locations/index.html
+++ b/locations/index.html
@@ -37,6 +37,10 @@ items:
         url: school
         name: School
         splitter: "#"
+      -
+        url: holidayresidence
+        name: Holiday residence
+        splitter: "#"
   -
     url: closetworld
     name: Closet Dark World
