--- a/locations/lightworld/index.html
+++ b/locations/lightworld/index.html
@@ -39,6 +39,31 @@ items:
             url: krisroom
             name: Kris's (and Asriel's) room
   -
+    url: holidayresidence
+    name: Holiday residence
+    sublist:
+      -
+        url: interior
+        name: Interior
+      -
+        name: First floor
+        sublist:
+          -
+            url: closet
+            name: Closet with gift boxes
+          -
+            url: kitchen
+            name: Kitchen & dining room
+      -
+        name: Second floor
+        sublist:
+          -
+            url: noelleroom
+            name: Noelle's room
+          -
+            url: dessroom
+            name: Dess's room
+  -
     url: school
     name: School
     sublist:
