Rename "Combat" section to "Encounters"
It's what they're called by the wiki and you're not always FIGHTing anyway so. Encounter fits better!

--- a/misc/encounters/rudinn.html
+++ b/misc/encounters/rudinn.html
@@ -163,7 +163,7 @@ toc:
 	</d-box>
 
 	<h4 id="encounter-rabbick">With Rabbick</h4>
-	<p>Unused. Appears to be intended for an unimplemented encounter in the room where <a href="{{ '/misc/combat/clover' | relative_url }}">Clover</a> is first encountered.</p>
+	<p>Unused. Appears to be intended for an unimplemented encounter in the room where <a href="{{ '/misc/encounters/clover' | relative_url }}">Clover is first encountered</a>.</p>
 	<d-box theme="battlemenu">
 		<d-text asterisk>Rabbick slithered in the way!</d-text>
 	</d-box>
