--- a/misc/index.html
+++ b/misc/index.html
@@ -31,7 +31,7 @@ toc:
 	<h2>Events</h2>
 
 	<ul>
-		<li><a href="{{ '/misc/combat' | relative_url }}">Combat</a> - Flavor text, dialogue, ACTs, and responses</li>
+		<li><a href="{{ '/misc/encounters' | relative_url }}">Encounters</a> - Flavor text, dialogue, ACTs, and responses</li>
 		<li><a href="{{ '/misc/gameover' | relative_url }}">Game Over messages</a> - standard and unique dialogue upon dying</li>
 	</ul>
 </section> -->
