Add Encounters index, link on Misc index

--- a/misc/index.html
+++ b/misc/index.html
@@ -6,9 +6,9 @@ toc:
   -
     id: possessions
     name: Possessions
-#   -
-#     id: events
-#     name: Events
+  -
+    id: events
+    name: Events
   -
     id: interface
     name: Interface
@@ -27,14 +27,14 @@ toc:
 	</ul>
 </section>
 
-<!-- <section class="d-section" id="events">
+<section class="d-section" id="events">
 	<h2>Events</h2>
 
 	<ul>
 		<li><a href="{{ '/misc/encounters' | relative_url }}">Encounters</a> - Flavor text, dialogue, ACTs, and responses</li>
-		<li><a href="{{ '/misc/gameover' | relative_url }}">Game Over messages</a> - standard and unique dialogue upon dying</li>
+		<!-- <li><a href="{{ '/misc/gameover' | relative_url }}">Game Over messages</a> - standard and unique dialogue upon dying</li> -->
 	</ul>
-</section> -->
+</section>
 
 <section class="d-section" id="interface">
 	<h2>Interface</h2>
