Holiday closet/interior: Fix annotations
- Correct the number of gift boxes you have to check before Noelle asks
- Correct when dancing Santa second dialogue is triggered + annotate when they start/stop moving

--- a/locations/lightworld/holidayresidence/closet.html
+++ b/locations/lightworld/holidayresidence/closet.html
@@ -39,7 +39,7 @@ toc:
 
 	<hr>
 
-	<h3 id="giftboxesthird">Third time with Susie and Noelle in the party</h3>
+	<h3 id="giftboxesthird">Fourth time with Susie and Noelle in the party</h3>
 	<p>Plays after the standard narration.</p>
 	<d-box theme="light">
 		<d-sprite speaker="Noelle" emotion="2"></d-sprite>
