--- a/locations/lightworld/holidayresidence/interior.html
+++ b/locations/lightworld/holidayresidence/interior.html
@@ -288,7 +288,7 @@ toc:
 	<h2>Dancing Santas</h2>
 
 	<h3 id="noelle">If Noelle is in the party</h3>
-	<h4>First time</h4>
+	<h4>First time on any Santa</h4>
 	<p class="note">The Santa is activated.</p>
 	<d-box theme="light">
 		<d-sprite speaker="Susie" emotion="9"></d-sprite>
@@ -315,8 +315,10 @@ toc:
 		<d-sprite speaker="Noelle" emotion="3"></d-sprite>
 		<d-text asterisk>So it takes forever on the low battery ones, faha.</d-text>
 	</d-box>
+	<p class="note">The Santa is deactivated.</p>
 
-	<h4>Second time</h4>
+	<h4>First time on a different Santa</h4>
+	<p class="note">The Santa is activated.</p>
 	<d-box theme="light">
 		<d-sprite speaker="Noelle" emotion="I"></d-sprite>
 		<d-text asterisk>(There wouldn't be so many Santas with dead batteries...)</d-text>
@@ -325,6 +327,7 @@ toc:
 		<d-sprite speaker="Noelle" emotion="H"></d-sprite>
 		<d-text asterisk>(If Kris hadn't glued the cases shut trying to "starve them"...)</d-text>
 	</d-box>
+	<p class="note">The Santa is deactivated.</p>
 
 	<h4>Subsequent times</h4>
 	<p class="note">The Santa starts or stops with no commentary.</p>
