DW items: Add beta items' combat descs

--- a/misc/darkitems.html
+++ b/misc/darkitems.html
@@ -46,6 +46,10 @@ sources:
     name: gml_GlobalScript_scr_itemdesc_oldtype
     chapters: [1]
     note: fallback text and beta item menu
+  -
+    name: gml_GlobalScript_scr_itemdesc_b
+    chapters: [1]
+    note: beta items combat descriptions
 
 credits: >
   <p>Compiled by wovenstarlight.</p>
@@ -3304,15 +3308,27 @@ toc:
 	</d-box>
 
 	<h4 id="darkcandybeta">Dark Candy (beta version)</h4>
+	<h5>Overworld</h5>
 	<d-box theme="battlemenu">
 		<d-text asterisk>"Dark Candy" - Heals 60 HP</d-text>
 		<d-text asterisk>Black and red star that<span class="break"></span>  tastes like marshmallows.</d-text>
 	</d-box>
 
+	<h5>In battle</h5>
+	<d-box theme="battledesc">
+		<d-text>Heals 60HP</d-text>
+	</d-box>
+
 	<h4 id="lifedew">Life Dew</h4>
+	<h5>Overworld</h5>
 	<d-box theme="battlemenu">
 		<d-text asterisk>"Life Dew" - Revive Ally (Weak)</d-text>
 		<d-text asterisk>Glowing dew...</d-text>
 		<d-text asterisk>It refreshes your SOUL.</d-text>
+	</d-box>
+
+	<h5>In battle</h5>
+	<d-box theme="battledesc">
+		<d-text>Revive ally (Weak)</d-text>
 	</d-box>
 </section>
