Add c3v0.0.089/c4v0.0.088 typo fixes
- Ch3 concert save point
- Noelle's room (rock CD)
- Dess's room (bat/skates)
- List out other required fixes in to-do file

--- a/locations/lightworld/holidayresidence/dessroom.html
+++ b/locations/lightworld/holidayresidence/dessroom.html
@@ -111,8 +111,13 @@ toc:
 <section class="d-section" id="skatebat">
 	<h2>Skates and bat</h2>
 
+	<h3>Prior to v0.0.088</h3>
 	<d-box theme="light">
 		<d-text asterisk>Rollerblades, wiffle bat. Looking at these things make your head hurt.</d-text>
+	</d-box>
+	<h3>v0.0.088 onwards</h3>
+	<d-box theme="light">
+		<d-text asterisk>Rollerblades, wiffle bat. Looking at these things makes your head hurt.</d-text>
 	</d-box>
 </section>
 
