--- a/locations/lightworld/holidayresidence/noelleroom.html
+++ b/locations/lightworld/holidayresidence/noelleroom.html
@@ -94,8 +94,13 @@ toc:
 	</d-box>
 
 	<h4>Subsequent times</h4>
+	<h5>Prior to v0.0.088</h5>
 	<d-box theme="light">
 		<d-text asterisk>(It's Noelle's bed. Under is a rock CD with a photo of Noelle in dark makeup.)</d-text>
+	</d-box>
+	<h5>v0.0.088 onwards</h5>
+	<d-box theme="light">
+		<d-text asterisk>(It's Noelle's bed. Under it is a rock CD with a photo of Noelle in dark makeup.)</d-text>
 	</d-box>
 
 	<hr>
