--- a/misc/savepoints.html
+++ b/misc/savepoints.html
@@ -685,8 +685,14 @@ Room names retrieved from gml_GlobalScript_scr_roomname.gml and mapped from IDs 
 	<d-box theme="dark">
 		<d-text asterisk>(It's a concert, but no one is here to play.)</d-text>
 	</d-box>
+	<hr class="hr2">
+	<h5>Prior to v0.0.089</h5>
 	<d-box theme="dark">
 		<d-text asterisk>(You are filled with the power of a crowd cheering for noone.)</d-text>
+	</d-box>
+	<h5>v0.0.089 onwards</h5>
+	<d-box theme="dark">
+		<d-text asterisk>(You are filled with the power of a crowd cheering for no one.)</d-text>
 	</d-box>
 
 	<!-- XFF -->
