Jevil encounter: note postfight speech source

--- a/misc/encounters/jevil.html
+++ b/misc/encounters/jevil.html
@@ -16,7 +16,7 @@ sources:
   -
     name: gml_Object_obj_jokerbattleevent_Step_0
     chapters: [1]
-    note: prefight speech
+    note: prefight/postfight speech
   -
     name: gml_Object_obj_joker_Step_0
     chapters: [1]
